# dicom-anonymizer

./: README.md  anonymize_dicom.py  pyproject.toml  test.py
.github/: build_windows.yml
.github/workflows/: build_windows.yml
