[project]
name = "dicom-anonymizer"
version = "0.1.0"
description = "Tool for secure anonymization of DICOM data"
authors = [
    {name = "milySW", email = "milosz.gajowczyk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydicom>=3.0.1,<4.0.0",
    "gooey>=1.0.8",
    "colored==1.4.4",
    "wxpython>=4.2.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false